--- a/styles.css
+++ b/styles.css
@@ -15,17 +15,16 @@ body {
     padding: 0;
     width: 100vw;
     height: 100vh;
-    display: grid;
-    place-items: center;
     background-color: var(--background-color);
-    color: var(--text-color)
+    color: var(--text-color);
+    overflow: hidden;
 }
 
 #particles-wrapper {
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
 }
 
 #particles {
-    outline: 1px solid blue;
+    outline: 1px solid red;
 }
